--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 requests = "^2.31.0"
 click = "^8.1.7"
 markdown2 = "^2.4.13"
+pygithub = "^2.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
