--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -48,3 +48,6 @@ jobs:
           # this label is required to link the image to the repo, but for discovery *and* for permissioning
           labels: |
             org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+          env: |
+            NIXPACKS_PYTHON_VERSION=3.11.7
+            NIXPACKS_POETRY_VERSION=1.8.2
