--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ click = "^8.1.7"
 markdown2 = "^2.5.0"
 pygithub = "^2.3.0"
 dinghy = "^1.3.2"
+apscheduler = "^3.10.4"
 
 
 [tool.poetry.group.dev.dependencies]
