--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ markdown2 = "^2.5.0"
 pygithub = "^2.3.0"
 dinghy = "^1.3.2"
 apscheduler = "^3.10.4"
+backoff = "^2.2.1"
+python-decouple-typed = "^3.11.0"
+css-inline = "^0.14.1"
 
 
 [tool.poetry.group.dev.dependencies]
