--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ readme = "README.md"
 python = "^3.11"
 requests = "^2.32.3"
 click = "^8.1.7"
-markdown2 = "^2.5.0"
 pygithub = "^2.3.0"
 dinghy = "^1.3.2"
 apscheduler = "^3.10.4"
@@ -27,6 +26,7 @@ isort = "^5.13.2"
 black = "^24.8.0"
 pyright = "^1.1.375"
 pylint = "^3.2.6"
+deptry = "^0.19.0"
 
 [build-system]
 requires = ["poetry-core"]
