--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ css-inline = "^0.14.1"
 beautifulsoup4 = "^4.12.3"
 cairosvg = "^2.7.1"
 patchy = "^2.8.0"
+jinja2 = "^3.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -31,3 +32,13 @@ deptry = "^0.19.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+github-digest = "github_digest:cli"
+
+[tool.isort]
+profile = "black"
+# helpful when copy/pasting GPT code
+float_to_top = true
+multi_line_output = 3
