--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: cosq-network/dotenv-loader@v1
+        with:
+          env-file: .env
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
